other-vpol/disallow-secrets-from-env-vars/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox02
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox
        - image: ghcr.io/kyverno/test-busybox:1.35
          name: busybox02
